# hl-recast

./: .gitignore  CMakeLists.txt  build_hl.hxml  build_hl_alt.hxml  build_win.bat  haxelib.json  recastnav.vcxproj  sourcelist.txt
recast/: BuildRecast.hx  DetourStatus.hx  NavMeshWrapper.hx  Recast.hx  recast.idl
recastnav/x64/Debug/recastnav.tlog/: recastnav.lastbuildstate
src/: h-recast.h  hl-idl-helpers.hpp  hl-recast.h  idl_hl.cpp  recast.cpp
